# HERALD

./: .dockerignore  .env.example  .gitattributes  .gitignore  README.md  config.yaml  docker-compose.yml  herald-terminal.html  herald_research_paper.tex  index.html  pyproject.toml  requirements-lock.txt  requirements.txt  research_paper_framework.md.resolved  setup.py  startup_strategy.md.resolved  technical_questions.md.resolved  walkthrough_v4.md
dashboard/: dashboard.py
docker/: Dockerfile  docker-compose.yml
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
herald/: __init__.py  cli.py  config.py  detector.py  logger.py  main_pipeline.py  model.py  predict.py  predict_with_fallback.py  result.py
herald.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
ml/: ablation_v3.py  retrain_v3.py
models/: char_vocab.json  domain_transformer.pt  ensemble_v2.joblib  ensemble_v3.joblib  ensemble_v4.joblib  ensemble_v5.joblib  ensemble_v5b.joblib  ensemble_v6.joblib  ensemble_v7.joblib  ensemble_v8.joblib  ensemble_v8_balanced.joblib  ensemble_v9.joblib
scripts/: add_indian_legitimate.py  analyze_category_d.py  analyze_errors.py  analyze_v5_fn.py  augment_short_phish_v2.py  build_dataset_v7.py  build_dataset_v8.py  build_full_dataset.py  build_full_dataset_v5.py  compare_v5_v6_fn.py  compare_versions.py  compare_versions_v6.py  download_datasets.py  download_fresh_phishing.py  enrich_with_whois.py  evaluate_v2_fallback.py  evaluate_v2_fallback_fast.py  extract_features_v4.py  extract_features_v7.py  extract_features_v8.py  (+24 more)
(+69 files in other folders)
