[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "herald"
version = "0.1.0"
description = "HERALD: AI-Based Phishing Detection for Critical Infrastructure"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "HERALD Contributors" }]
keywords = ["phishing", "detection", "security", "ai", "critical-infrastructure"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Information Technology",
    "Topic :: Security",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "scikit-learn>=1.3",
    "numpy>=1.24",
    "joblib>=1.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
]

[project.scripts]
herald = "herald.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["herald*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["herald"]
omit = ["tests/*"]
